Usign Jekyll and some SEO optimizations, new .gitignore, .editorconfig

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,66 @@
-# Jekyll build artifacts
-_site/
-.sass-cache/
-.jekyll-metadata
+# Jekyll build outputs and caches
+/_site/*                     # Jekyll’s generated site
+.sass-cache/                # Sass cache directory
+.jekyll-cache/              # Jekyll build cache
+.jekyll-metadata            # Jekyll metadata file
 
-# GitHub Pages deployment
-Gemfile.lock
+# Ruby & Bundler
+.bundle/                    # Bundler cache directory
+vendor/                     # Vendor gem directory (if used)
 
-# OS & editor junk
-.DS_Store
-*.swp
-*.tmp
+# Dependency directories
+node_modules/               # Node.js dependencies
+npm-debug.log*              # npm debug logs
+yarn-error.log*             # Yarn error logs
 
-# TinaCMS auto-generated files
-tina/__generated__/
+# Operating system files
+.DS_Store                   # macOS file metadata
+Thumbs.db                   # Windows image cache
+desktop.ini                 # Windows desktop configuration
 
-# JS runtime dependencies (if using npm/Yarn)
-node_modules/
+# JetBrains WebStorm / IntelliJ IDEA
+.idea/                      # IDE project files
+*.iml                       # Module files
+out/                        # Compiler output
 
-# Optional: add editor-specific state files here
+# Editor backups and temp files
+*~                          # Editor backup files
+*.swp                       # Vim swap files
+*.tmp                       # Temporary files
+
+# Logs
+*.log                       # Log files
+
+# IDE-independent helpers
+.vscode/                    # VSCode settings
+
+# Custom Domain file
+CNAME                       # keep under source control but ignore deployment outputs
+
+# Miscellaneous
+*.pem                       # SSL certificates
+/_site/*
+
+cachedData/
+files/
+
+### IntelliJ IDEA ###
+.idea/*
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+
+### VS Code ###
+.vscode/
+
