chore(config): sync jekyll config and gems

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,22 @@
 title: Therapy Cove
-description: Secure, personalized online therapy in Greece. Launching soon.
-baseurl: ""        # no subpath
+description: Secure, personalized online therapy in Greece.
+baseurl: ""
 url: "https://www.therapycove.gr"
-theme: minima      # or remove if you’re using custom layouts
+permalink: pretty
+lang: "el"
 plugins:
   - jekyll-seo-tag
-
 exclude:
   - ".idea/"
   - "node_modules/"
   - "vendor/"
-  - "Gemfile*"
+  - ".bundle/"
+  - "Gemfile"
+  - "Gemfile.lock"
+  - "package.json"
+  - "package-lock.json"
+  - "craco.config.js"
+  - "src/"
+  - "public/"
+  - "locales/"
+  - "README.md"
