refactor(landing): adopt therapy-cove schema and layout

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,20 +37,20 @@ collections:
               - { label: Greek, value: "el" }
               - { label: English, value: "en" }
 
-  - name: home
-    label: Home Page
+  - name: therapy_cove
+    label: Therapy Cove
     files:
-      - name: home
-        label: Home Sections
-        file: _data/home.yml
+      - name: therapy_cove
+        label: Therapy Cove Sections
+        file: _data/therapy_cove.yml
         fields:
           - label: Navigation
-            name: nav
+            name: site_nav
             widget: object
             fields:
               - { label: Logo Alt Text, name: logo_alt, widget: string }
-              - label: Menu Items
-                name: items
+              - label: Menu Links
+                name: links
                 widget: list
                 summary: "{{fields.label}} → {{fields.href}}"
                 fields:
@@ -64,8 +64,8 @@ collections:
                         "^(#[-a-zA-Z0-9]+|/|https?://.+)$",
                         "Use an anchor (#section), /, or a full URL."
                       ]
-              - label: Actions
-                name: actions
+              - label: Call To Action
+                name: cta
                 widget: object
                 fields:
                   - label: Primary Action
@@ -101,12 +101,12 @@ collections:
             widget: object
             fields:
               - { label: Heading, name: heading, widget: string }
-              - label: Body
-                name: body
+              - label: Lead Text
+                name: lead
                 widget: markdown
-                hint: "Rich text. Use **bold** to emphasize words."
+                hint: "Short intro (1–2 sentences)."
               - label: Primary Button
-                name: primary_action
+                name: primary_cta
                 widget: object
                 fields:
                   - { label: Label, name: label, widget: string }
@@ -120,7 +120,7 @@ collections:
                         "Use an anchor (#section) or a full URL."
                       ]
               - label: Secondary Button
-                name: secondary_action
+                name: secondary_cta
                 widget: object
                 fields:
                   - { label: Label, name: label, widget: string }
@@ -133,18 +133,22 @@ collections:
                         "^(#[-a-zA-Z0-9]+|https?://.+)$",
                         "Use an anchor (#section) or a full URL."
                       ]
-              - label: Image
-                name: image
+              - label: Space Image
+                name: space_image
                 widget: object
                 fields:
                   - { label: Image, name: src, widget: image }
                   - { label: Alt Text, name: alt, widget: string }
-          - label: Info Section
-            name: info
+          - label: Info (Clients & Therapists)
+            name: audiences
             widget: object
             fields:
+              - label: Intro
+                name: intro
+                widget: markdown
+                hint: "Short paragraphs; separate with a blank line."
               - label: For Clients
-                name: client
+                name: clients
                 widget: object
                 fields:
                   - { label: Heading, name: heading, widget: string }
@@ -155,8 +159,8 @@ collections:
                 fields:
                   - { label: Heading, name: heading, widget: string }
                   - { label: Body, name: body, widget: markdown, hint: "Short paragraphs; separate with a blank line." }
-          - label: Team
-            name: team
+          - label: Therapists
+            name: therapists
             widget: object
             fields:
               - { label: Heading, name: heading, widget: string }
@@ -171,28 +175,28 @@ collections:
                   - { label: Image, name: image, widget: image }
                   - { label: Alt Text, name: alt, widget: string }
                   - { label: Bio, name: bio, widget: markdown, hint: "Use a blockquote (>) for a quote if desired." }
-          - label: Approaches Section
-            name: features
+          - label: Approaches
+            name: approaches
             widget: object
             fields:
               - { label: Heading, name: heading, widget: string }
-              - { label: Description, name: description, widget: markdown, hint: "Keep this concise (1–3 sentences)." }
-              - label: Items
-                name: items
+              - { label: Summary, name: summary, widget: markdown, hint: "Keep this concise (1–3 sentences)." }
+              - label: Tabs
+                name: tabs
                 widget: list
                 summary: "{{fields.title}}"
                 min: 2
                 fields:
                   - { label: Title, name: title, widget: string }
                   - { label: Description, name: description, widget: markdown, hint: "Short paragraph." }
-              - label: Image
-                name: image
-                widget: object
-                fields:
-                  - { label: Image, name: src, widget: image }
-                  - { label: Alt Text, name: alt, widget: string }
+                  - label: Image
+                    name: image
+                    widget: object
+                    fields:
+                      - { label: Image, name: src, widget: image }
+                      - { label: Alt Text, name: alt, widget: string }
           - label: Contact Intro
-            name: pricing
+            name: contact_intro
             widget: object
             fields:
               - { label: Eyebrow, name: eyebrow, widget: string }
