chore(landing): remove legacy assets and templates

--- a/_data/therapy_cove.yml
+++ b/_data/therapy_cove.yml
@@ -20,7 +20,7 @@ site_nav:
 hero:
   heading: "Ένας χώρος για σένα"
   lead: |
-    Το **Therapy Cove** είναι ένα μοντέρνο κέντρο και εκπαιδευτήριο ψυχικής υγείας, ανοιχτό προς όλους όσους έχουν ανάγκη για υποστήριξη.
+    Το **Therapy Cove** είναι ένα μοντέρνο κέντρο και εκπαιδευτήριο ψυχικής υγείας, ανοιχτό προς όλους όσους έχουν ανάγκη για υποστήριξη. Στελεχωμένο από καταξιωμένους ψυχολόγους και θεραπευτές με πολυετή εμπειρία στο χώρο, το κέντρο ειδικεύεται σε ζητήματα που αφορούν τους νέους, τους γονείς, τις οικογένειες τις σχέσεις, το άγχος, τις διαταραχές και την προσωπική ανάπτυξη μεταξύ άλλων. Επιπλέον το κέντρο στηρίζει τους ασκούμενους και εκπαιδευόμενους θεραπευτές που αναζητούν έναν επαγγελματικό χώρο που ενισχύει το έργο τους. Εκπαιδευτικά σεμινάρια, χώρος άσκησης επαγγέλματος, ευκαιρίες πρακτικής άσκησης και υποστήριξης από καταξιωμένους επαγγελματίες είναι στη διάθεση τους για την ανάπτυξη της νέας γενιάς θεραπευτών. O χώρος και οι υπηρεσίες του Therapy Cove είναι ανοιχτοί προς όλους τους ενήλικες, ανεξαρτήτως ανάγκης, ταυτότητας ή ψυχοθεραπευτικού υπόβαθρου.
   primary_cta:
     label: "Ο χώρος"
     href: "#space"
@@ -32,14 +32,7 @@ hero:
     alt: "Therapy Cove space"
 
 audiences:
-  intro: |
-    Στελεχωμένο από καταξιωμένους ψυχολόγους και θεραπευτές με πολυετή εμπειρία στο χώρο, το κέντρο ειδικεύεται σε ζητήματα που αφορούν τους νέους, τους γονείς, τις οικογένειες τις σχέσεις, το άγχος, τις διαταραχές και την προσωπική ανάπτυξη μεταξύ άλλων.
-
-    Επιπλέον το κέντρο στηρίζει τους ασκούμενους και εκπαιδευόμενους θεραπευτές που αναζητούν έναν επαγγελματικό χώρο που ενισχύει το έργο τους.
-
-    Εκπαιδευτικά σεμινάρια, χώρος άσκησης επαγγέλματος, ευκαιρίες πρακτικής άσκησης και υποστήριξης από καταξιωμένους επαγγελματίες είναι στη διάθεση τους για την ανάπτυξη της νέας γενιάς θεραπευτών.
-
-    O χώρος και οι υπηρεσίες του Therapy Cove είναι ανοιχτοί προς όλους τους ενήλικες, ανεξαρτήτως ανάγκης, ταυτότητας ή ψυχοθεραπευτικού υπόβαθρου.
+  intro: ""
   clients:
     heading: "Για θεραπευόμενους"
     body: |
