--- a/_data/therapy_cove.yml
+++ b/_data/therapy_cove.yml
@@ -51,7 +51,7 @@ therapists:
   heading: "Η ομάδα του Therapy Cove"
   members:
     - name: "Αρτεμις Ρεντούμη"
-      role: "Ψυχολόγος- Ψυχοθεραπεύτρια"
+      role: "Ψυχολόγος - Ψυχοθεραπεύτρια"
       image: "/assets/images/therapist-artemis-rentoumi.jpg"
       alt: "Αρτεμις Ρεντούμη"
       bio: |
@@ -59,7 +59,7 @@ therapists:
 
         > «Δεν υπάρχει θεραπεία δίχως επικοινωνία και είναι δική μου ευθύνη να μάθω τη γλώσσα κάθε θεραπευόμενου»
     - name: "Βιβιάνα Κούκου"
-      role: "Κοινωνική λειτουργός- Ψυχοθεραπεύτρια"
+      role: "Κοινωνική λειτουργός - Ψυχοθεραπεύτρια"
       image: "/assets/images/therapist-viviana-koukou.jpg"
       alt: "Βιβιάνα Κούκου"
       bio: |
@@ -67,7 +67,7 @@ therapists:
 
         > «Όταν κάποιος νιώθει ότι γίνεται ουσιαστικά κατανοητός, μπορεί σταδιακά να απελευθερωθεί από ενοχές, φόβους και περιοριστικά μοτίβα, και να καλλιεργήσει μια πιο ουσιαστική σχέση με τον εαυτό του και τους άλλους.»
     - name: "Εβελίνα Μουστάκα"
-      role: "Ψυχολόγος- Ψυχοθεραπεύτρια"
+      role: "Ψυχολόγος - Ψυχοθεραπεύτρια"
       image: "/assets/images/therapist-evelina-moustaka.jpg"
       alt: "Εβελίνα Μουστάκα"
       bio: |
@@ -75,7 +75,7 @@ therapists:
 
         Υπήρξε εθελόντρια στην πανελλαδική γραμμή ψυχοκοινωνικής υποστήριξης 10306 παρέχοντας ψυχολογικές υπηρεσίες και τακτική συνεργάτης διαφόρων ΜΚΟ συμμετέχοντας σε δράσεις για την ευαισθητοποίηση σε θέματα ψυχικής υγείας και οργάνωση ομάδων ενδυνάμωσης κοινωνικών δεξιοτήτων.
 
-        > «Η επιτυχία του έργου μας είναι όταν ο θεραπευόμενος δεν προσπαθεί να καταπιέζεται ή να αποφεύγιε αλλά να μαθαίνει να αποδέχεται τον εαυτό του και να εστιάζει σε ό,τι έχει αξία και νόημα για το ίδιο.»
+        > «Η επιτυχία του έργου μας είναι όταν ο θεραπευόμενος δεν προσπαθεί να καταπιέζεται ή να αποφεύγει αλλά να μαθαίνει να αποδέχεται τον εαυτό του και να εστιάζει σε ό,τι έχει αξία και νόημα για το ίδιο.»
 
 approaches:
   heading: "Ψυχοθεραπευτικές Προσεγγίσεις"
