feat(media): add responsive images pipeline

--- a/_data/therapy_cove.yml
+++ b/_data/therapy_cove.yml
@@ -86,20 +86,20 @@ approaches:
       description: |
         Εξερεύνησε διαφορετικά ψυχοθεραπευτικά ρεύματα και προσεγγίσεις, όπως η Γνωσιακή-Συμπεριφορική Θεραπεία (CBT), η Ψυχοδυναμική Θεραπεία, καθώς και οι Υπαρξιακές και Ανθρωπιστικές προσεγγίσεις. Κάθε μοντέλο προσφέρει ένα μοναδικό πλαίσιο κατανόησης της ανθρώπινης εμπειρίας και στήριξης της εσωτερικής διεργασίας του ατόμου, ανάλογα με τις ανάγκες, τις αξίες και τη φάση ζωής του θεραπευόμενου.
       image:
-        src: "/assets/images/therapy-cove-space-approaches.jpg"
-        alt: "Therapy Cove space"
+        src: "/assets/images/psychotherapeutic-approaches.jpg"
+        alt: "Ψυχοθεραπευτικές προσεγγίσεις"
     - title: "Οφέλη Ψυχοθεραπείας"
       description: |
         Η ψυχοθεραπεία προσφέρει ένα υποστηρικτικό και ασφαλές πλαίσιο μέσα στο οποίο το άτομο μπορεί να επεξεργαστεί σκέψεις, συναισθήματα και συμπεριφορικά μοτίβα. Τα οφέλη της περιλαμβάνουν τη σταδιακή ενίσχυση της ψυχικής ανθεκτικότητας, την καλλιέργεια πιο λειτουργικών μηχανισμών αντιμετώπισης (coping strategies), καθώς και τη γενικότερη ενίσχυση της συναισθηματικής ευεξίας και αυτογνωσίας.
       image:
-        src: "/assets/images/therapy-cove-space-hero.jpg"
-        alt: "Therapy Cove space"
+        src: "/assets/images/psychotherapeutic-approaches.jpg"
+        alt: "Οφέλη ψυχοθεραπείας"
     - title: "Βρες τον κατάλληλο ψυχοθεραπευτή"
       description: |
         Ανακάλυψε χρήσιμες κατευθύνσεις και διαθέσιμους πόρους για την αναζήτηση του κατάλληλου θεραπευτή, με βάση τις προσωπικές σου ανάγκες. Η επιλογή μπορεί να βασιστεί σε παράγοντες όπως ο τομέας εξειδίκευσης του θεραπευτή, η μεθοδολογική προσέγγιση που ακολουθεί, καθώς και ο βαθμός θεραπευτικής συμβατότητας και εμπιστοσύνης που αναπτύσσεται στη σχέση θεραπευόμενου–θεραπευτή.
       image:
-        src: "/assets/images/therapist-artemis-rentoumi.jpg"
-        alt: "Αρτεμις Ρεντούμη"
+        src: "/assets/images/find-the-best-therapist.jpg"
+        alt: "Βρες τον κατάλληλο ψυχοθεραπευτή"
 
 contact_intro:
   eyebrow: "Επικοινωνία"
