--- a/_data/therapy_cove.yml
+++ b/_data/therapy_cove.yml
@@ -114,7 +114,7 @@ contact:
   phone: "211 218 4996"
   phone_href: "tel:+302112184996"
   address: "Καρνεαδου 23, Αθήνα"
-  address_map_url: "https://www.google.com/maps/search/?api=1&query_place_id=ChIJPfN08TS9oRQRzCUSGS0TR_E"
+  address_map_url: "https://www.google.com/maps/search/?api=1&query=Therapy%20Cove%2C%20Karneadou%2023%2C%20Athina%2010675%2C%20Greece&query_place_id=ChIJPfN08TS9oRQRzCUSGS0TR_E"
   form:
     name_label: "Ονοματεπωνυμο"
     email_label: "Email"
