--- a/_data/el/therapy_cove.yml
+++ b/_data/el/therapy_cove.yml
@@ -16,6 +16,9 @@ site_nav:
     secondary:
       label: "Επικοινωνία"
       href: "#contact"
+  lang_toggle:
+    label: "EN"
+    aria_label: "Switch to English"
 
 hero:
   heading: "Ένας χώρος για σένα"
@@ -120,6 +123,22 @@ contact:
     email_label: "Email"
     message_label: "Μήνυμα"
     submit_label: "Αποστολή"
+    messages:
+      invalid: "Παρακαλούμε συμπλήρωσε σωστά τα πεδία."
+      pending: "Αποστολή..."
+      success: "Το μήνυμα στάλθηκε. Θα επικοινωνήσουμε σύντομα."
+      error: "Παρουσιάστηκε σφάλμα. Δοκιμάστε ξανά."
+      send_error: "Δεν ήταν δυνατή η αποστολή. Δοκιμάστε ξανά."
+    field_errors:
+      name:
+        valueMissing: "Συμπλήρωσε το ονοματεπώνυμο."
+        tooShort: "Το ονοματεπώνυμο πρέπει να έχει τουλάχιστον 2 χαρακτήρες."
+      email:
+        valueMissing: "Συμπλήρωσε το email."
+        typeMismatch: "Χρησιμοποίησε ένα έγκυρο email."
+      message:
+        valueMissing: "Συμπλήρωσε το μήνυμα."
+        tooShort: "Το μήνυμα πρέπει να έχει τουλάχιστον 10 χαρακτήρες."
 
 footer:
   logo_alt: "Therapy Cove logo"
