--- a/admin/config.yml
+++ b/admin/config.yml
@@ -53,17 +53,13 @@ collections:
                 name: links
                 widget: list
                 summary: "{{fields.label}} → {{fields.href}}"
+                allow_add: false
+                allow_delete: false
+                min: 4
+                max: 4
                 fields:
                   - { label: Label, name: label, widget: string }
-                  - label: Link
-                    name: href
-                    widget: string
-                    hint: "Use an anchor (#section), /, or a full URL."
-                    pattern:
-                      [
-                        "^(#[-a-zA-Z0-9]+|/|https?://.+)$",
-                        "Use an anchor (#section), /, or a full URL."
-                      ]
+                  - { label: Link, name: href, widget: hidden }
               - label: Call To Action
                 name: cta
                 widget: object
@@ -87,15 +83,7 @@ collections:
                     widget: object
                     fields:
                       - { label: Label, name: label, widget: string }
-                      - label: Link
-                        name: href
-                        widget: string
-                        hint: "Use an anchor (#section) or a full URL."
-                        pattern:
-                          [
-                            "^(#[-a-zA-Z0-9]+|https?://.+)$",
-                            "Use an anchor (#section) or a full URL."
-                          ]
+                      - { label: Link, name: href, widget: hidden }
               - label: Language Toggle
                 name: lang_toggle
                 widget: object
@@ -115,16 +103,8 @@ collections:
                 name: primary_cta
                 widget: object
                 fields:
-                  - { label: Label, name: label, widget: string }
-                  - label: Link
-                    name: href
-                    widget: string
-                    hint: "Use an anchor (#section) or a full URL."
-                    pattern:
-                      [
-                        "^(#[-a-zA-Z0-9]+|https?://.+)$",
-                        "Use an anchor (#section) or a full URL."
-                      ]
+                      - { label: Label, name: label, widget: string }
+                      - { label: Link, name: href, widget: hidden }
               - label: Secondary Button
                 name: secondary_cta
                 widget: object
@@ -174,7 +154,10 @@ collections:
                 name: members
                 widget: list
                 summary: "{{fields.name}} — {{fields.role}}"
-                min: 1
+                min: 3
+                max: 3
+                allow_add: false
+                allow_delete: false
                 fields:
                   - { label: Name, name: name, widget: string }
                   - { label: Role, name: role, widget: string }
@@ -191,7 +174,10 @@ collections:
                 name: tabs
                 widget: list
                 summary: "{{fields.title}}"
-                min: 2
+                min: 3
+                max: 3
+                allow_add: false
+                allow_delete: false
                 fields:
                   - { label: Title, name: title, widget: string }
                   - { label: Description, name: description, widget: markdown, hint: "Short paragraph." }
@@ -249,11 +235,11 @@ collections:
                     name: messages
                     widget: object
                     fields:
-                      - { label: Invalid Form, name: invalid, widget: string }
-                      - { label: Pending, name: pending, widget: string }
-                      - { label: Success, name: success, widget: string }
-                      - { label: Error, name: error, widget: string }
-                      - { label: Send Error, name: send_error, widget: string }
+                      - { label: Invalid Form, name: invalid, widget: hidden }
+                      - { label: Pending, name: pending, widget: hidden }
+                      - { label: Success, name: success, widget: hidden }
+                      - { label: Error, name: error, widget: hidden }
+                      - { label: Send Error, name: send_error, widget: hidden }
                   - label: Field Errors
                     name: field_errors
                     widget: object
@@ -262,20 +248,20 @@ collections:
                         name: name
                         widget: object
                         fields:
-                          - { label: Missing, name: valueMissing, widget: string }
-                          - { label: Too Short, name: tooShort, widget: string }
+                          - { label: Missing, name: valueMissing, widget: hidden }
+                          - { label: Too Short, name: tooShort, widget: hidden }
                       - label: Email Field
                         name: email
                         widget: object
                         fields:
-                          - { label: Missing, name: valueMissing, widget: string }
-                          - { label: Invalid Email, name: typeMismatch, widget: string }
+                          - { label: Missing, name: valueMissing, widget: hidden }
+                          - { label: Invalid Email, name: typeMismatch, widget: hidden }
                       - label: Message Field
                         name: message
                         widget: object
                         fields:
-                          - { label: Missing, name: valueMissing, widget: string }
-                          - { label: Too Short, name: tooShort, widget: string }
+                          - { label: Missing, name: valueMissing, widget: hidden }
+                          - { label: Too Short, name: tooShort, widget: hidden }
           - label: Footer
             name: footer
             widget: object
