chore(cms): add bilingual collections

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,8 +20,8 @@ public_folder: "/assets/images"
 locale: "el"
 
 collections:
-  - name: site
-    label: Site Settings
+  - name: site_el
+    label: Greek (EL)
     files:
       - name: metadata
         label: Page Metadata
@@ -30,15 +30,22 @@ collections:
           - { label: Layout, name: layout, widget: hidden, default: default }
           - { label: Page Title, name: title, widget: string }
           - { label: Meta Description, name: description, widget: text }
-          - label: Language
-            name: lang
-            widget: select
-            options:
-              - { label: Greek, value: "el" }
-              - { label: English, value: "en" }
+          - { label: Language, name: lang, widget: hidden, default: "el" }
 
-  - name: therapy_cove
-    label: Therapy Cove
+  - name: site_en
+    label: English (EN)
+    files:
+      - name: metadata
+        label: Page Metadata
+        file: en/index.md
+        fields:
+          - { label: Layout, name: layout, widget: hidden, default: default }
+          - { label: Page Title, name: title, widget: string }
+          - { label: Meta Description, name: description, widget: text }
+          - { label: Language, name: lang, widget: hidden, default: "en" }
+
+  - name: therapy_cove_el
+    label: Therapy Cove (EL)
     files:
       - name: therapy_cove
         label: Therapy Cove Sections
@@ -105,6 +112,239 @@ collections:
                 fields:
                       - { label: Label, name: label, widget: string }
                       - { label: Link, name: href, widget: hidden }
+              - label: Secondary Button
+                name: secondary_cta
+                widget: object
+                fields:
+                  - { label: Label, name: label, widget: string }
+                  - label: Link
+                    name: href
+                    widget: string
+                    hint: "Use an anchor (#section) or a full URL."
+                    pattern:
+                      [
+                        "^(#[-a-zA-Z0-9]+|https?://.+)$",
+                        "Use an anchor (#section) or a full URL."
+                      ]
+              - label: Space Image
+                name: space_image
+                widget: object
+                fields:
+                  - { label: Image, name: src, widget: image }
+                  - { label: Alt Text, name: alt, widget: string }
+          - label: Info (Clients & Therapists)
+            name: audiences
+            widget: object
+            fields:
+              - label: Intro
+                name: intro
+                widget: markdown
+                hint: "Short paragraphs; separate with a blank line."
+              - label: For Clients
+                name: clients
+                widget: object
+                fields:
+                  - { label: Heading, name: heading, widget: string }
+                  - { label: Body, name: body, widget: markdown, hint: "Short paragraphs; separate with a blank line." }
+              - label: For Therapists
+                name: therapist
+                widget: object
+                fields:
+                  - { label: Heading, name: heading, widget: string }
+                  - { label: Body, name: body, widget: markdown, hint: "Short paragraphs; separate with a blank line." }
+          - label: Therapists
+            name: therapists
+            widget: object
+            fields:
+              - { label: Heading, name: heading, widget: string }
+              - label: Members
+                name: members
+                widget: list
+                summary: "{{fields.name}} — {{fields.role}}"
+                min: 3
+                max: 3
+                allow_add: false
+                allow_delete: false
+                fields:
+                  - { label: Name, name: name, widget: string }
+                  - { label: Role, name: role, widget: string }
+                  - { label: Image, name: image, widget: image }
+                  - { label: Alt Text, name: alt, widget: string }
+                  - { label: Bio, name: bio, widget: markdown, hint: "Use a blockquote (>) for a quote if desired." }
+          - label: Approaches
+            name: approaches
+            widget: object
+            fields:
+              - { label: Heading, name: heading, widget: string }
+              - { label: Summary, name: summary, widget: markdown, hint: "Keep this concise (1–3 sentences)." }
+              - label: Tabs
+                name: tabs
+                widget: list
+                summary: "{{fields.title}}"
+                min: 3
+                max: 3
+                allow_add: false
+                allow_delete: false
+                fields:
+                  - { label: Title, name: title, widget: string }
+                  - { label: Description, name: description, widget: markdown, hint: "Short paragraph." }
+                  - label: Image
+                    name: image
+                    widget: object
+                    fields:
+                      - { label: Image, name: src, widget: image }
+                      - { label: Alt Text, name: alt, widget: string }
+          - label: Contact Intro
+            name: contact_intro
+            widget: object
+            fields:
+              - { label: Eyebrow, name: eyebrow, widget: string }
+              - { label: Heading, name: heading, widget: text }
+          - label: Contact Details
+            name: contact
+            widget: object
+            fields:
+              - { label: Heading, name: heading, widget: string }
+              - { label: Email Label, name: email_label, widget: string }
+              - { label: Phone Label, name: phone_label, widget: string }
+              - { label: Address Label, name: address_label, widget: string }
+              - label: Email
+                name: email
+                widget: string
+                pattern:
+                  [
+                    "^\\S+@\\S+\\.[A-Za-z]{2,}$",
+                    "Enter a valid email address."
+                  ]
+              - label: Phone
+                name: phone
+                widget: string
+                pattern:
+                  [
+                    "^[0-9+()\\s-]{7,}$",
+                    "Use digits and optional +, spaces, or dashes."
+                  ]
+              - label: Phone Link
+                name: phone_href
+                widget: string
+                hint: "Use a tel: link, e.g. tel:+302112184996"
+              - { label: Address, name: address, widget: string }
+              - { label: Address Map URL, name: address_map_url, widget: string }
+              - label: Form Labels
+                name: form
+                widget: object
+                fields:
+                  - { label: Name Label, name: name_label, widget: string }
+                  - { label: Email Label, name: email_label, widget: string }
+                  - { label: Message Label, name: message_label, widget: string }
+                  - { label: Submit Button Label, name: submit_label, widget: string }
+                  - label: Status Messages
+                    name: messages
+                    widget: object
+                    fields:
+                      - { label: Invalid Form, name: invalid, widget: hidden }
+                      - { label: Pending, name: pending, widget: hidden }
+                      - { label: Success, name: success, widget: hidden }
+                      - { label: Error, name: error, widget: hidden }
+                      - { label: Send Error, name: send_error, widget: hidden }
+                  - label: Field Errors
+                    name: field_errors
+                    widget: object
+                    fields:
+                      - label: Name Field
+                        name: name
+                        widget: object
+                        fields:
+                          - { label: Missing, name: valueMissing, widget: hidden }
+                          - { label: Too Short, name: tooShort, widget: hidden }
+                      - label: Email Field
+                        name: email
+                        widget: object
+                        fields:
+                          - { label: Missing, name: valueMissing, widget: hidden }
+                          - { label: Invalid Email, name: typeMismatch, widget: hidden }
+                      - label: Message Field
+                        name: message
+                        widget: object
+                        fields:
+                          - { label: Missing, name: valueMissing, widget: hidden }
+                          - { label: Too Short, name: tooShort, widget: hidden }
+          - label: Footer
+            name: footer
+            widget: object
+            fields:
+              - { label: Logo Alt Text, name: logo_alt, widget: string }
+              - { label: Tagline, name: tagline, widget: text, required: false }
+              - { label: Copyright, name: copyright, widget: string }
+
+  - name: therapy_cove_en
+    label: Therapy Cove (EN)
+    files:
+      - name: therapy_cove
+        label: Therapy Cove Sections
+        file: _data/en/therapy_cove.yml
+        fields:
+          - label: Navigation
+            name: site_nav
+            widget: object
+            fields:
+              - { label: Logo Alt Text, name: logo_alt, widget: string }
+              - label: Menu Links
+                name: links
+                widget: list
+                summary: "{{fields.label}} → {{fields.href}}"
+                allow_add: false
+                allow_delete: false
+                min: 4
+                max: 4
+                fields:
+                  - { label: Label, name: label, widget: string }
+                  - { label: Link, name: href, widget: hidden }
+              - label: Call To Action
+                name: cta
+                widget: object
+                fields:
+                  - label: Primary Action
+                    name: primary
+                    widget: object
+                    fields:
+                      - { label: Label, name: label, widget: string }
+                      - { label: Link, name: href, widget: hidden }
+                  - label: Secondary Action
+                    name: secondary
+                    widget: object
+                    fields:
+                      - { label: Label, name: label, widget: string }
+                      - { label: Link, name: href, widget: hidden }
+              - label: Language Toggle
+                name: lang_toggle
+                widget: object
+                fields:
+                  - { label: Button Label, name: label, widget: string }
+                  - { label: Aria Label, name: aria_label, widget: string }
+          - label: Hero
+            name: hero
+            widget: object
+            fields:
+              - { label: Heading, name: heading, widget: string }
+              - label: Lead Text
+                name: lead
+                widget: markdown
+                hint: "Short intro (1–2 sentences)."
+              - label: Primary Button
+                name: primary_cta
+                widget: object
+                fields:
+                  - { label: Label, name: label, widget: string }
+                  - label: Link
+                    name: href
+                    widget: string
+                    hint: "Use an anchor (#section) or a full URL."
+                    pattern:
+                      [
+                        "^(#[-a-zA-Z0-9]+|https?://.+)$",
+                        "Use an anchor (#section) or a full URL."
+                      ]
               - label: Secondary Button
                 name: secondary_cta
                 widget: object
